# UrbanHeatInsight

./: .env  .gitignore  README.md  adr.example.md  adr.template.md  architecture.md  docker-compose.yml  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json
backend/: READMETest.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/app/: logger_config.py  main.py
backend/app/api/: __init__.py  collector_router.py
backend/app/clients/: minio_client.py
backend/app/core/: config.py  logger_config.py
backend/app/database/: database.py
backend/app/models/: base_models.py  bucket_names.py  health.py  heatmap.py  version.py
backend/app/repositories/: heatmap_repo.py  system_repo.py
backend/app/routers/: __init__.py  collector_router.py  heatmap.py  minio_storage.py  minio_storage_api.py  system_api.py
backend/app/services/: gpkg_converter.py  minio_client.py  minio_storage_service.py
backend/app/tests/testscript/: minio_bucketdelete.py  minio_delete.py  minio_test_download.py  minio_upload.py
backend/openapi/: .openapi-generator-config.json  .openapi-generator-ignore  openapi.yaml
backend/tests/: test_datasets_api.py  test_files_api.py  test_jobs_api.py  test_layers_api.py  test_processed_api.py  test_system_api.py
backend/tests/testscript/: test_minio_bucketdelete.py  test_minio_download.py  test_minio_upload.py
frontend/: .editorconfig  .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.example.json  package.json  tsconfig.json  vite.config.ts
ml/: log_dummy.py
scripts/: gpkg_to_geojson.py
(+48 files in other folders)
